update docs fixes

--- a/docs/pages/clients/client_async.mdx
+++ b/docs/pages/clients/client_async.mdx
@@ -399,7 +399,8 @@ asyncio.run(main())
 </Callout>
 
 #### .get_token_account_balance
-Returns balance of tokens held in the specified token account
+Returns balance of tokens held in the specified token account.
+
 <Code>
 ```python 
 def get_token_account_balance(public_key: PublicKey | str, **kwargs)
