--- a/docs/pages/clients/client.mdx
+++ b/docs/pages/clients/client.mdx
@@ -350,7 +350,7 @@ Returns signatures for confirmed transactions that include the given address in 
 
 <Code>
 ```python 
-def get_signatures_for_address()
+def get_signatures_for_address(address: str, limit: Optional[str], until: Optional[str], before: Optional[str])
 ```
 </Code>
 
