--- a/docs/pages/models/publickey.mdx
+++ b/docs/pages/models/publickey.mdx
@@ -1,7 +1,7 @@
 import { Code } from '/components/Code';
 
 # PublicKey
-**Class representing a public key model. Preferred to use this over plain public key string**
+**Class representing a public key model. Ideal to use this class over plain public key string**
 
 <Code>
   ```python 
@@ -9,20 +9,19 @@ import { Code } from '/components/Code';
   ```
 </Code>
 
-> The class requires one value argument which can be string, bytes, bytearray or int array form of the public key.
+> The class requires one value argument to initialize which can be string, bytes, bytearray or int array form of the public key.
 
 #### Methods
 - [base58_encode](#base58_encode)
-- [base58_decode](#base58_decode)
 
 #### Attributes
-- [byte_value](#byte_value )
+- [byte_value](#byte_value)
 
 
 ## Methods
 
 #### .base58_encode
-Converts the public key into base 58 form
+Returns the public key in base58 encoding (the type we see in wallets)
 
 <Code>
 ```python 
@@ -30,17 +29,7 @@ def base58_encode()
 ```
 </Code>
 
-#### .base58_decode
-Decodes a base58 encoded public key
-
-<Code>
-```python 
-def base58_decode()
-```
-</Code>
-
-
 ## Attributes
 
 #### .byte_value
-Returns the byte value of the public key. Recommended to use ```bytes()``` function and passing to public key to get the byte value over this attribute.
+Returns the byte value of the public key
