--- a/docs/pages/models/publickey.mdx
+++ b/docs/pages/models/publickey.mdx
@@ -9,7 +9,7 @@ import { Code } from '/components/Code';
   ```
 </Code>
 
-> The class requires one value argument to initialize which can be string, bytes, bytearray or int array form of the public key.
+> The class requires one value argument to initialize which can be string, bytes, bytearray or int array form of the public key. The public key must be exactly 32 bytes in length.
 
 #### Methods
 - [base58_encode](#base58_encode)
