add: python version recommendation

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -25,6 +25,8 @@ pip install solathon
 ```
 </Code>
 
+> **Note:** Requires Python 3.9.0 or higher
+
 ### ✨ Easy to use
 Using object-oriented approach, Solathon makes everything easy to understand and work with. The documentation includes detailed explanations with examples to get anyone started quickly.
 
@@ -32,7 +34,7 @@ Using object-oriented approach, Solathon makes everything easy to understand and
 Most of the Solana JSON RPC with the latest methods are supported. Other than that, many utility functions are also provided which come in handy often.
 
 ### 🚀 High performance
-Being light weight and optimized for the best performance; Solathon comes with batteries included without being too heavy.
+Being light weight and optimized for the best performance, Solathon comes with batteries included without being too heavy.
 
 ### 🌀 Async support
 Both synchronous and asynchronous clients are available, use the one more suitable for your application.
